--- a/src/Pages/Login/login.css
+++ b/src/Pages/Login/login.css
@@ -3,4 +3,6 @@
     border: 1px solid #cccccc;
     padding: 20px 20px 0 20px;
     margin: 100px auto;
+    background-color: transparent;
+    box-sizing: border-box;
   }
